@@ -1,15 +1,15 @@
 package com.zrlog.admin.business.service;
 
+import com.hibegin.common.dao.dto.PageData;
+import com.hibegin.common.dao.dto.PageRequest;
 import com.hibegin.common.util.BeanUtil;
+import com.hibegin.common.util.UrlEncodeUtils;
 import com.zrlog.admin.business.rest.response.ArticleTypeResponseEntry;
-import com.zrlog.common.rest.request.PageRequest;
-import com.zrlog.data.dto.PageData;
 import com.zrlog.model.Type;
 
-import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.sql.SQLException;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class ArticleTypeService {
 
@@ -19,8 +19,8 @@ public class ArticleTypeService {
         return new PageData<>(mapPageData.getTotalElements(), mapPageData.getRows().stream().map(e -> {
             ArticleTypeResponseEntry response = BeanUtil.convert(e, ArticleTypeResponseEntry.class);
             response.setAmount(response.getTypeamount());
-            response.setUrl(homeUrl + "sort/" + URLEncoder.encode(response.getAlias(), StandardCharsets.UTF_8) + (staticHtml ? ".html" : ""));
+            response.setUrl(homeUrl + UrlEncodeUtils.encodeUrl("sort/" + response.getAlias()) + (staticHtml ? ".html" : ""));
             return response;
-        }).toList(), mapPageData.getPage(), mapPageData.getSize());
+        }).collect(Collectors.toList()), mapPageData.getPage(), mapPageData.getSize());
     }
 }
