@@ -1,48 +1,60 @@
 package com.zrlog.admin.web.controller.api;
 
 import com.google.gson.Gson;
-import com.hibegin.common.util.BeanUtil;
 import com.hibegin.common.util.IOUtil;
+import com.hibegin.common.util.ObjectHelpers;
 import com.hibegin.common.util.StringUtils;
 import com.hibegin.http.annotation.ResponseBody;
-import com.hibegin.http.server.web.Controller;
+import com.zrlog.admin.business.AdminConstants;
+import com.zrlog.admin.business.dto.UserLoginDTO;
 import com.zrlog.admin.business.rest.request.LoginRequest;
 import com.zrlog.admin.business.rest.response.*;
 import com.zrlog.admin.business.service.AdminArticleService;
+import com.zrlog.admin.business.service.AdminResourceService;
+import com.zrlog.admin.business.service.AdminStatisticsService;
 import com.zrlog.admin.business.service.UserService;
-import com.zrlog.admin.util.SystemInfoUtils;
 import com.zrlog.admin.web.controller.page.AdminPageController;
+import com.zrlog.blog.web.util.WebTools;
 import com.zrlog.business.exception.MissingInstallException;
 import com.zrlog.business.rest.response.PublicInfoVO;
 import com.zrlog.business.service.CommonService;
-import com.zrlog.business.util.InstallUtils;
+import com.zrlog.common.controller.BaseController;
+import com.zrlog.common.type.RunMode;
 import com.zrlog.common.Constants;
 import com.zrlog.common.rest.response.ApiStandardResponse;
-import com.zrlog.model.Comment;
-import com.zrlog.model.Log;
-import com.zrlog.model.User;
 import com.zrlog.util.BlogBuildInfoUtil;
 import com.zrlog.util.I18nUtil;
+import com.zrlog.util.ThreadUtils;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.sql.SQLException;
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutorService;
 
-public class AdminController extends Controller {
+import static com.zrlog.util.CrossUtils.cross;
+
+public class AdminController extends BaseController {
 
     private final UserService userService = new UserService();
 
     @ResponseBody
-    public ApiStandardResponse<LoginResponse> login() throws SQLException {
-        if (!InstallUtils.isInstalled()) {
+    public ApiStandardResponse<UserBasicInfoResponse> login() throws Exception {
+        if (!Constants.zrLogConfig.isInstalled()) {
             throw new MissingInstallException();
         }
-        LoginRequest loginRequest = BeanUtil.convertWithValid(getRequest().getInputStream(), LoginRequest.class);
-        userService.login(loginRequest);
-        String key = UUID.randomUUID().toString();
-        Constants.zrLogConfig.getTokenService().setAdminToken(new User().getUserByUserName(loginRequest.getUserName().toLowerCase()), key, Objects.equals(loginRequest.getHttps(), true) ? "https" : "http", getRequest(), getResponse());
-        return new ApiStandardResponse<>(new LoginResponse(key));
+        LoginRequest loginRequest = getRequestBodyWithNullCheck(LoginRequest.class);
+        UserLoginDTO dto = userService.login(loginRequest, request);
+        Constants.zrLogConfig.getTokenService().setAdminToken(dto.getId(), dto.getSecretKey(), dto.getUserBasicInfoResponse().getKey(),
+                Objects.equals(loginRequest.getHttps(), true) ? "https" : "http", getRequest(), getResponse());
+        return new ApiStandardResponse<>(dto.getUserBasicInfoResponse());
+    }
+
+    @ResponseBody
+    public ApiStandardResponse<Map<String, Object>> adminResource() {
+        cross(request, response);
+        return new ApiStandardResponse<>(new AdminResourceService().adminResourceInfo(request));
     }
 
     @ResponseBody
@@ -53,14 +65,21 @@ public class AdminController extends Controller {
             }
             Map map = new Gson().fromJson(IOUtil.getStringInputStream(inputStream), Map.class);
             PublicInfoVO publicInfoVO = new CommonService().getPublicInfo(request);
-            if (StringUtils.isNotEmpty(publicInfoVO.websiteTitle())) {
-                map.put("short_name", publicInfoVO.websiteTitle());
+            if (StringUtils.isNotEmpty(publicInfoVO.getWebsiteTitle())) {
+                map.put("short_name", publicInfoVO.getWebsiteTitle());
             }
-            map.put("name", Constants.getAdminTitle(""));
-            map.put("theme_color", publicInfoVO.pwaThemeColor());
-            map.put("description", Objects.requireNonNullElse(Constants.zrLogConfig.getPublicWebSite().get("description"), ""));
+            map.put("name", AdminConstants.getAdminDocumentTitleByUri("/"));
+            map.put("theme_color", publicInfoVO.getPwaThemeColor());
+            map.put("description", ObjectHelpers.requireNonNullElse(Constants.zrLogConfig.getPublicWebSite().get("description"), ""));
             map.put("id", Constants.getAppId());
-            map.put("background_color", publicInfoVO.admin_darkMode() ? "#000000" : "#FFFFFF");
+            map.put("background_color", publicInfoVO.getAdmin_darkMode() ? "#000000" : "#FFFFFF");
+            List<Map<String, Object>> list = (List<Map<String, Object>>) map.get("icons");
+            for (Map<String, Object> icon : list) {
+                icon.put("src", WebTools.buildEncodedUrl(request, (String) icon.get("src")));
+            }
+            if (Constants.zrLogConfig.isStaticPluginRequest(request)) {
+                map.put("start_url", ((String) map.get("start_url")).replace("./index", "./index.html"));
+            }
             return map;
         }
     }
@@ -74,28 +93,27 @@ public class AdminController extends Controller {
         return new UpdateRecordResponse();
     }
 
-    private StatisticsInfoResponse statisticsInfo() throws SQLException {
-        StatisticsInfoResponse info = new StatisticsInfoResponse();
-        info.setCommCount(new Comment().count());
-        info.setToDayCommCount(new Comment().countToDayComment());
-        info.setClickCount(new Log().sumClick().longValue());
-        info.setArticleCount(new Log().getAdminCount());
-        return info;
-    }
 
     @ResponseBody
     public ApiStandardResponse<Map<String, Object>> error() {
-        return new ApiStandardResponse<>(Map.of("message", Objects.requireNonNullElse(request.getParaToStr("message"), "")));
+        Map<String, Object> map = new HashMap<>();
+        map.put("message", request.getParaToStr("message", ""));
+        return new ApiStandardResponse<>(map);
     }
 
     @ResponseBody
     public ApiStandardResponse<Map<String, Object>> plugin() {
-        return new ApiStandardResponse<>(new HashMap<>());
+        String page = getRequest().getParaToStr("page", "");
+        Map<String, Object> data = new HashMap<>();
+        data.put("includePagePath", "admin/plugins/" + page);
+        return new ApiStandardResponse<>(data);
     }
 
     @ResponseBody
     public ApiStandardResponse<Void> dev() {
-        Constants.devEnabled = true;
+        if (Constants.runMode != RunMode.NATIVE_AGENT) {
+            System.getProperties().put("sws.run.mode", "dev");
+        }
         return new ApiStandardResponse<>();
     }
 
@@ -106,9 +124,20 @@ public class AdminController extends Controller {
             tips.add(I18nUtil.getBackendStringFromRes("admin.index.welcomeTips_" + i));
         }
         Collections.shuffle(tips);
-        return new ApiStandardResponse<>(new IndexResponse(statisticsInfo(),
-                I18nUtil.getBackendStringFromRes("admin.index.welcomeTip"),
-                new ArrayList<>(Collections.singletonList(tips.getFirst())),
-                new AdminArticleService().activityDataList(), BlogBuildInfoUtil.getVersionInfo()));
+        ExecutorService executor = ThreadUtils.newFixedThreadPool(20);
+        try {
+            List<CompletableFuture<?>> futures = new ArrayList<>();
+            CompletableFuture<StatisticsInfoResponse> statisticsInfo = new AdminStatisticsService().statisticsInfo(executor);
+            futures.add(statisticsInfo);
+            CompletableFuture<List<ArticleActivityData>> dataList = new AdminArticleService().activityDataList(executor);
+            futures.add(dataList);
+            CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
+            return new ApiStandardResponse<>(new IndexResponse(statisticsInfo.join(),
+                    I18nUtil.getBackendStringFromRes("admin.index.welcomeTip"),
+                    new ArrayList<>(Collections.singletonList(tips.get(0))),
+                    dataList.join(), BlogBuildInfoUtil.getVersionInfo()));
+        } finally {
+            executor.shutdown();
+        }
     }
 }
