@@ -1,20 +1,19 @@
 package com.zrlog.blog.web.controller.page;
 
+import com.hibegin.common.dao.dto.PageData;
+import com.hibegin.common.dao.dto.PageRequest;
+import com.hibegin.common.dao.dto.PageRequestImpl;
 import com.hibegin.common.util.LoggerUtil;
 import com.hibegin.common.util.StringUtils;
 import com.hibegin.http.server.web.Controller;
 import com.zrlog.blog.web.util.WebTools;
-import com.zrlog.business.rest.request.CreateCommentRequest;
-import com.zrlog.business.rest.response.CreateCommentResponse;
-import com.zrlog.business.service.ArticleService;
-import com.zrlog.business.service.CommentService;
-import com.zrlog.business.service.TemplateHelper;
+import com.zrlog.blog.business.rest.request.CreateCommentRequest;
+import com.zrlog.blog.business.rest.response.CreateCommentResponse;
+import com.zrlog.blog.business.service.ArticleService;
+import com.zrlog.blog.business.service.CommentService;
 import com.zrlog.business.service.VisitorArticleService;
-import com.zrlog.business.util.PagerUtil;
+import com.zrlog.blog.web.util.PagerUtil;
 import com.zrlog.common.Constants;
-import com.zrlog.common.rest.request.PageRequest;
-import com.zrlog.common.rest.request.PageRequestImpl;
-import com.zrlog.data.dto.PageData;
 import com.zrlog.model.Log;
 import com.zrlog.model.Type;
 import com.zrlog.util.I18nUtil;
@@ -24,8 +23,6 @@ import org.jsoup.Jsoup;
 import org.jsoup.safety.Safelist;
 
 import java.math.BigDecimal;
-import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.sql.SQLException;
 import java.util.*;
 import java.util.logging.Logger;
@@ -42,7 +39,7 @@ public class ArticleController extends Controller {
      * add page info for template more easy
      */
     private void setPageDataInfo(String currentUri, PageData<Map<String, Object>> data, PageRequest pageRequest) {
-        getRequest().getAttr().put("yurl", currentUri);
+        getRequest().getAttr().put("yurl", Constants.getArticleUri() + currentUri);
         long totalPage =
                 BigDecimal.valueOf(Math.ceil(data.getTotalElements() * 1.0 / pageRequest.getSize())).longValue();
         if (totalPage > 0) {
@@ -54,25 +51,21 @@ public class ArticleController extends Controller {
         }
     }
 
-    public String index() throws SQLException {
-        PageRequest pageRequest = new PageRequestImpl(parseUriInfo(request.getUri()).page(), Constants.getDefaultRows());
+    public String index() {
+        PageRequest pageRequest = new PageRequestImpl(parseUriInfo(request.getUri()).getPage(), Constants.getDefaultRows());
         PageData<Map<String, Object>> data = new Log().visitorFind(pageRequest, null);
-        setPageDataInfo(Constants.getArticleUri() + "all-", data, pageRequest);
+        setPageDataInfo("all-", data, pageRequest);
         return "index";
     }
 
 
-    public String search() throws SQLException {
-        String key = request.getParaToStr("key");
+    public String search() {
+        String key = request.getParaToStr("key", "");
         ArticleUriInfoVO uriInfoVO = parseUriInfo(request.getUri());
         PageData<Map<String, Object>> data;
-        if (StringUtils.isNotEmpty(key)) {
-            if ("GET".equals(getRequest().getMethod().name())) {
-                key = WebTools.convertRequestParam(key);
-            }
-        } else {
+        if (StringUtils.isEmpty(key)) {
             try {
-                key = uriInfoVO.key();
+                key = uriInfoVO.getKey();
             } catch (Exception e) {
                 LOGGER.warning("Parse " + request.getUri() + " error " + e.getMessage());
             }
@@ -87,17 +80,17 @@ public class ArticleController extends Controller {
         request.getAttr().put("tipsType", I18nUtil.getBlogStringFromRes("search"));
         request.getAttr().put("tipsName", WebTools.htmlEncode(key));
 
-        setPageDataInfo(Constants.getArticleUri() + "search/" + key + "-", data, new PageRequestImpl(uriInfoVO.page(), Constants.getDefaultRows()));
+        setPageDataInfo("search/" + key + "-", data, new PageRequestImpl(uriInfoVO.getPage(), Constants.getDefaultRows()));
         return "page";
     }
 
     public String record() {
         ArticleUriInfoVO uriInfoVO = parseUriInfo(request.getUri());
         request.getAttr().put("tipsType", I18nUtil.getBlogStringFromRes("archive"));
-        request.getAttr().put("tipsName", uriInfoVO.key());
+        request.getAttr().put("tipsName", uriInfoVO.getKey());
 
-        setPageDataInfo(Constants.getArticleUri() + "record/" + uriInfoVO.key() + "-", new Log().findByDate(uriInfoVO.page(), Constants.getDefaultRows(),
-                uriInfoVO.key()), new PageRequestImpl(uriInfoVO.page(),
+        setPageDataInfo("record/" + uriInfoVO.getKey() + "-", new Log().findByDate(uriInfoVO.getPage(), Constants.getDefaultRows(),
+                uriInfoVO.getKey()), new PageRequestImpl(uriInfoVO.getPage(),
                 Constants.getDefaultRows()));
         return "page";
     }
@@ -122,18 +115,8 @@ public class ArticleController extends Controller {
 
     public String detail() throws SQLException {
         String uri = getRequest().getUri();
-        Map<String, Object> detail = articleService.detail(uri.replace("/", "").replace(".html", ""));
+        Map<String, Object> detail = articleService.detail(uri.replace("/", "").replace(".html", ""), request);
         if (Objects.nonNull(detail)) {
-            List<Map<String,Object>> tags = new ArrayList<>();
-            String keywords = Objects.requireNonNullElse(detail.get("keywords"),"").toString();
-            for (String tag : keywords.split(",")) {
-                if(StringUtils.isEmpty(tag.trim())){
-                    continue;
-                }
-                String tagUrl = WebTools.getHomeUrl(request) + Constants.getArticleUri() + "tag/" + URLEncoder.encode( tag, StandardCharsets.UTF_8) + TemplateHelper.getSuffix(request);;
-                tags.add(Map.of("name",tag,"url",tagUrl));
-            }
-            detail.put("tags", tags);
             request.getAttr().put("log", detail);
         }
         return "detail";
@@ -147,11 +130,11 @@ public class ArticleController extends Controller {
         }
         String rawArgs = rawUrl.substring(rawUrl.lastIndexOf("/") + 1);
         List<String> list = Arrays.asList(rawArgs.split("-"));
-        boolean numeric = ParseUtil.isNumeric(list.getLast());
+        boolean numeric = ParseUtil.isNumeric(list.get(list.size() - 1));
         StringJoiner sj = new StringJoiner("-");
         int page = 1;
         if (numeric) {
-            page = ParseUtil.strToInt(list.getLast(), 1);
+            page = ParseUtil.strToInt(list.get(list.size() - 1), 1);
             for (int i = 0; i < list.size() - 1; i++) {
                 sj.add(list.get(i));
             }
@@ -161,7 +144,7 @@ public class ArticleController extends Controller {
             }
         }
         String key = sj.toString();
-        return new ArticleUriInfoVO(WebTools.convertRequestParam(key), page);
+        return new ArticleUriInfoVO(key, page);
     }
 
     public static void main(String[] args) {
@@ -171,11 +154,11 @@ public class ArticleController extends Controller {
 
     public String sort() throws SQLException {
         ArticleUriInfoVO uriInfoVO = parseUriInfo(request.getUri());
-        setPageDataInfo(Constants.getArticleUri() + "sort/" + uriInfoVO.key() + "-", new Log().findByTypeAlias(uriInfoVO.page(), Constants.getDefaultRows(),
-                uriInfoVO.key()), new PageRequestImpl(uriInfoVO.page(),
+        setPageDataInfo("sort/" + uriInfoVO.getKey() + "-", new Log().findByTypeAlias(uriInfoVO.getPage(), Constants.getDefaultRows(),
+                uriInfoVO.getKey()), new PageRequestImpl(uriInfoVO.getPage(),
                 Constants.getDefaultRows()));
 
-        Map<String, Object> type = new Type().findByAlias(uriInfoVO.key());
+        Map<String, Object> type = new Type().findByAlias(uriInfoVO.getKey());
         request.getAttr().put("type", type);
         request.getAttr().put("tipsType", I18nUtil.getBlogStringFromRes("category"));
         if (type != null) {
@@ -186,10 +169,9 @@ public class ArticleController extends Controller {
 
     public String tag() throws SQLException {
         ArticleUriInfoVO uriInfoVO = parseUriInfo(request.getUri());
-
-        String tag = WebTools.convertRequestParam(uriInfoVO.key());
-        setPageDataInfo(Constants.getArticleUri() + "tag/" + tag + "-", new Log().findByTag(uriInfoVO.page(), Constants.getDefaultRows(), tag),
-                new PageRequestImpl(uriInfoVO.page(),
+        String tag = uriInfoVO.getKey();
+        setPageDataInfo("tag/" + tag + "-", new Log().findByTag(uriInfoVO.getPage(), Constants.getDefaultRows(), tag),
+                new PageRequestImpl(uriInfoVO.getPage(),
                         Constants.getDefaultRows()));
         getRequest().getAttr().put("tipsType", I18nUtil.getBlogStringFromRes("tag"));
         getRequest().getAttr().put("tipsName", tag);
